Locators updated